# baconometer

./: .gitignore  Dockerfile  Makefile  README.md  SERVER-SETUP.md  docker-compose.import.seed.yml  docker-compose.import.yml  docker-compose.yml  import_neo4j_bulk.sh  pyproject.toml
import/: indexes.cypher
scripts/: check_duplicates.py  check_neo4j_up.py  generate_neo4j_bulk_csvs.py  import_neo4j_bulk.sh  init.cypher
seed/: acted_in.csv  actors.csv  films.csv
src/: .gitignore  README.md  app.py  config.py  import_to_neo4j.py  wsgi.py
src/baconometer/: __init__.py  app.py  config.py
src/baconometer/templates/: baconify.html
src/templates/: baconify.html
src/tests/: test_app.py
src/tests/integration-tests/: test_app.py
tests/integration-tests/: conftest.py  test_app.py
tests/system-tests/: test_app.py
tests/unit-tests/: test_app.py
