[project]
name = "baconometer"
version = "0.1.0"
description = "A Flask-based application for doing six degrees of separation analysis"
authors = [
    {name = "Matthew Ault", email = "matthew.ault@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "flask>=3.1.1,<4.0.0",
    "neo4j>=5.0.0,<6.0.0",
    "gunicorn (>=23.0.0,<24.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "baconometer"
version = "0.1.0"
packages = [
    { include = "baconometer", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"